--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,7 @@
   --secondary-color: #333;
   --text-color: #555;
   --white: #fff;
+  --dark-grey: #333;
   --light-gray: #f4f4f4;
   --border-color: #ddd;
   --disabled-color: #ccc;
